--- a/Accessories.html
+++ b/Accessories.html
@@ -9,11 +9,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <title>Accessories</title>
     <style>
         .background {
             background-color: black;
+        }
+
+        body {
+            font-family: "Monomakh", serif;
+            font-weight: 400;
         }
 
         .nav-logo {
@@ -105,8 +115,24 @@
             width: 100%;
             object-fit: cover;
             border-radius: 10px;
-            border: 5px solid orange;
             background-color: hsla(0, 0%, 100%, 0.59);
+        }
+
+        .img-container {
+            border: 3px solid orange;
+            padding: 30px;
+        }
+
+        .img-container h2 {
+            font-size: 17px;
+            font-weight: bolder;
+            margin-top: 10px;
+        }
+
+        .img-container span {
+            font-weight: lighter;
+            font-size: 17px;
+            color: white;
         }
 
         .img-item:hover {
@@ -355,7 +381,8 @@
                                 <li class="main-list  mt-5"><a href="shop.html" class="main-links">Shop</a></li>
                                 <li class="main-list"><a href="Mobile.html" class="main-links">Mobile</a></li>
                                 <li class="main-list"><a href="Computers.html" class="main-links">Computers</a>
-                                <li class="main-list"><a href="Accessories.html" class="main-links Accessories">Accessories</a></li>
+                                <li class="main-list"><a href="Accessories.html"
+                                        class="main-links Accessories">Accessories</a></li>
                                 <li class="main-list"><a href="contact.html" class="main-links">Contact</a></li>
                             </ul>
                         </div>
@@ -364,65 +391,101 @@
                                 <span class="fs-4 text-light">No produts</span>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/charger1.html"> <img src="image/pad.jpg"
-                                                class="img-item" alt=""></a>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/headphone.html"> <img src="image/headphone.jpg"
-                                                class="img-item" alt=""></a>
-                                        <div>
-                                            <h2 class="text-light">ipone</h2>
+                                        <div class="img-container">
+                                            <a href="/each-products/charger1.html"> <img src="image/pad.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/earbud1.html"> <img src="images/pod3,1.webp"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/headphone.html"> <img src="image/headphone.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/mouse1.html"> <img src="images/mouse2,1.webp"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/earbud1.html"> <img src="images/pod3,1.webp"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/charger2.html"><img src="image/accessories (3).jpg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/mouse1.html"> <img src="images/mouse2,1.webp"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/keybroad.html"> <img src="image/jambx.jpg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/charger2.html"><img src="image/accessories (3).jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/bluetooth.html"> <img src="image/jbl buletooth.jpg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/keybroad.html"> <img src="image/jambx.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/mouse2.html"> <img src="image/black mouse.jpg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/mouse2.html"> <img src="image/black mouse.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/camera1.html"> <img src="images/cam1,1.webp"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/camera1.html"> <img src="images/cam1,1.webp"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/batterybank1.html"> <img
-                                                src="image/apple batterypack.jpg" class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/batterybank1.html"> <img
+                                                    src="image/apple batterypack.jpg" class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/batterybank2.html"> <img src="image/charger (3).jpeg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/batterybank2.html"> <img
+                                                    src="image/charger (3).jpeg" class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/batterybank3.html"> <img
-                                                src="image/vrurc 10000mAh bank.jpg" class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/batterybank3.html"> <img
+                                                    src="image/vrurc 10000mAh bank.jpg" class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/earbud2.html"> <img src="image/jbl buds.jpg"
-                                                class="img-item" alt=""></a>
+                                        <div class="img-container">
+                                            <a href="/each-products/bluetooth2.html"> <img src="images/bluetooth.jpg"
+                                                    class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Find N3 Flip</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <a href="/each-products/bluetooth2.html"> <img src="images/bluetooth.jpg"
-                                                class="img-item" alt=""></a>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
