--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <style>
+        body {
+            font-family: "Monomakh", serif;
+            font-weight: 400;
+        }
+
         /* Body backgroun color */
         .main-background {
             background-color: black;
@@ -61,22 +71,24 @@
         }
 
         /* nav icons */
-        .nav-icons{
-            color:black;
+        .nav-icons {
+            color: black;
         }
 
         .nav-icons:hover {
             color: orange;
         }
-        .link{
-            display:none;
+
+        .link {
+            display: none;
         }
-      
+
         .login-link {
-            font-size:15px;
+            font-size: 15px;
             color: white;
         }
-        .login-link:hover{
+
+        .login-link:hover {
             color: orange;
         }
 
@@ -221,13 +233,13 @@
             background-color: hsla(0, 0%, 50%, 0.169);
             height: auto;
             color: lightgrey;
-            width: 100%;
+            width:100%;
             background-repeat: no-repeat;
             background-size: cover;
         }
 
         .footer-header {
-            margin: 50px 30px 0px 30px
+            margin:30px 30px 0px 30px
         }
 
         .footer-list {
@@ -239,7 +251,7 @@
         }
 
         .footer-list2 {
-            margin-top: 40px;
+            margin-top:40px;
         }
 
         .footer-paraghap-list {
@@ -270,7 +282,7 @@
         }
 
         .copy-right-box {
-            height: 80px;
+            height:80px;
             margin-top: 50px;
         }
 
@@ -427,13 +439,12 @@
                 margin-top: 12px;
             }
 
-        .copy-right-box {
-            height: 80px;
-            margin-top: 30px;
-            margin-left:30px;
+            .copy-right-box {
+                height: 80px;
+                margin-top: 30px;
+                margin-left: 30px;
+            }
         }
-        }
-
     </style>
 </head>
 
@@ -487,7 +498,8 @@
                             <div class="link" id="login">
                                 <ul class="breadcrumb">
                                     <li class="breadcrumb-item"><a href="login.html" class="login-link">Login</a></li>
-                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html" class="login-link">Sign In</a>
+                                    <li class="breadcrumb-item text-light"> <a href="sign-up.html"
+                                            class="login-link">Sign In</a>
                                     </li>
                                 </ul>
                             </div>
@@ -618,8 +630,7 @@
                         <div class="col-12 col-lg-5 col-md-5 footer-container">
                             <h3 class=" text-capitalize  footer-header">INFO</h3>
                             <ul>
-                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market
-                                    Niger</li>
+                                <li class="footer-list footer-list2">Adderss: Kwankwashe Street, opposite IBB market Niger</li>
                                 <li class="footer-list">State: Niger State</li>
                                 <li class="footer-list">Email: amyogechi@gmail.com</li>
                                 <li class="footer-list">Phone: 234-812-099-1981</li>
