--- a/Mobile.html
+++ b/Mobile.html
@@ -9,11 +9,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/693dd61249.js" crossorigin="anonymous"></script>
     <style>
         * {
             margin: 0PX;
             padding: 0PX;
+        }
+
+        body {
+            font-family: "Monomakh", serif;
+            font-weight: 400;
         }
 
         .background {
@@ -404,11 +414,10 @@
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5 ">
                                         <div class="img-container">
-                                            <a href="/each-products/OPPO Find X7 Ultra.html"> <img src="image/oppo amy special.jpg"
-                                                    class="img-item" alt=""></a>
+                                            <a href="/each-products/OPPO Find X7 Ultra.html"> <img
+                                                    src="image/oppo amy special.jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">OPPO Find X7 Ultra</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
-                                            <button> <i class="fa-solid fa-user"> </i></button>
                                         </div>
 
                                     </div>
@@ -416,39 +425,39 @@
                                         <div class="img-container">
                                             <a href="/each-products/OPPO F25 Pro.html"> <img src="image/oppo.jpg"
                                                     class="img-item" alt=""></a>
-                                                <h2 class="text-light">OPPO F25 Pro</h2>
-                                                <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <h2 class="text-light">OPPO F25 Pro</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
 
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/Samsung Galaxy A32.html"> <img src="images/samsung.jpg"
-                                                class="img-item" alt=""></a>
+                                            <a href="/each-products/Samsung Galaxy A32.html"> <img
+                                                    src="images/samsung.jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light"> Samsung Galaxy A32</h2>
-                                             <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                       <div class="img-container">
-                                        <a href="/each-products/Oppo Reno 13 Pro.html"><img src="image/PHONE- (1).jpg"
-                                            class="img-item" alt=""></a>
-                                        <h2 class="text-light">Oppo Reno 13 Pro</h2>
-                                        <span><strike>$00000</strike><span>-$0000</span></span>
-                                       </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                       <div class="img-container">
-                                        <a href="/each-products/Realme 12 X Pro Plus.html"> <img src="image/PHONE- (2).jpg"
-                                            class="img-item" alt=""></a>
-                                        <h2 class="text-light">Realme 12 X Pro Plus</h2>
-                                        <span><strike>$00000</strike><span>-$0000</span></span>
-                                       </div>
+                                        <div class="img-container">
+                                            <a href="/each-products/Oppo Reno 13 Pro.html"><img
+                                                    src="image/PHONE- (1).jpg" class="img-item" alt=""></a>
+                                            <h2 class="text-light">Oppo Reno 13 Pro</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/Oppo Find N3 Flip.html"> <img src="image/PHONE- (5).jpg"
-                                                class="img-item" alt=""></a>
+                                            <a href="/each-products/Realme 12 X Pro Plus.html"> <img
+                                                    src="image/PHONE- (2).jpg" class="img-item" alt=""></a>
+                                            <h2 class="text-light">Realme 12 X Pro Plus</h2>
+                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
+                                        <div class="img-container">
+                                            <a href="/each-products/Oppo Find N3 Flip.html"> <img
+                                                    src="image/PHONE- (5).jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Oppo Find N3 Flip</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
@@ -456,15 +465,15 @@
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
                                             <a href="/each-products/iPhone 12 pro.html"> <img src="image/PHONE- (7).jpg"
-                                                class="img-item" alt=""></a>
+                                                    class="img-item" alt=""></a>
                                             <h2 class="text-light">iPhone 12 pro</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/Oppo Reno 10 Pro+.html"> <img src="image/PHONE- (4).jpg"
-                                                class="img-item" alt=""></a>
+                                            <a href="/each-products/Oppo Reno 10 Pro+.html"> <img
+                                                    src="image/PHONE- (4).jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Oppo Reno 10 Pro+</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
