--- a/login.html
+++ b/login.html
@@ -5,21 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
+    rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <style>
-    body{
+    body {
       margin: 0px;
       padding: 0px;
+      font-family: "Monomakh", serif;
+      font-weight: 400;
     }
-    section{
+
+    section {
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       display: flex;
       justify-content: center;
-      height:700px;
+      height: 700px;
       align-items: center;
       flex-direction: column;
     }
@@ -46,7 +54,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom:40px;
+      margin-bottom: 40px;
     }
 
     .login-button {
@@ -87,34 +95,39 @@
       font-weight: bold;
       text-decoration: none;
     }
-    .form-input{
-      margin-top:20px;
+
+    .form-input {
+      margin-top: 20px;
       box-shadow: 18px 10px 12px lightgrey;
-      height:50px;
-      border-radius:20px;
+      height: 50px;
+      border-radius: 20px;
     }
-    .password-label a{
+
+    .password-label a {
       color: rgb(40, 40, 138);
       text-decoration: none;
       margin-left: 4px;
     }
-    .login{
+
+    .login {
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       box-shadow: 18px 10px 12px lightgrey;
-      height:50px;
-      margin-top:30px;
+      height: 50px;
+      margin-top: 30px;
       color: white;
       font-size: 20px;
       font-weight: bold;
       width: 100%;
-      border-radius:20px;
+      border-radius: 20px;
     }
-    .Signup{
+
+    .Signup {
       font-size: 16px;
       margin-top: 40px;
-      margin-left:50px;
+      margin-left: 50px;
     }
-    .Signup span a{
+
+    .Signup span a {
       color: rgb(40, 40, 138);
       text-decoration: none;
     }
@@ -122,26 +135,26 @@
 </head>
 
 <body>
- <section>
-  <h2 class="login-text">Login</h2>
-  <div class="container login-container">
-    <div class="button-container">
-      <button class="login-button"><a href="login.html">Login</a></button>
-      <button class="signup-button"><a href="sign-up.html">Sigup</a></button>
+  <section>
+    <h2 class="login-text">Login</h2>
+    <div class="container login-container">
+      <div class="button-container">
+        <button class="login-button"><a href="login.html">Login</a></button>
+        <button class="signup-button"><a href="sign-up.html">Sigup</a></button>
+      </div>
+      <form action="">
+        <div>
+          <input type="email" placeholder="Email Address" class="form-control form-input" required>
+        </div>
+        <div>
+          <input type="password" placeholder="Password" class="form-control form-input" required>
+          <label for="password" class="password-label"><a href="#">Forget password?</a></label>
+        </div>
+        <button class="login">Login</button>
+        <p class="Signup">Not a member? <span><a href="sign-up.html">Signup now</a></span></p>
+      </form>
     </div>
-    <form action="">
-     <div>
-      <input type="email" placeholder="Email Address" class="form-control form-input" required>
-     </div>
-     <div>
-      <input type="password" placeholder="Password" class="form-control form-input" required>
-      <label for="password" class="password-label"><a href="#">Forget password?</a></label>
-     </div>
-      <button class="login">Login</button>
-      <p class="Signup">Not a member? <span><a href="sign-up.html">Signup now</a></span></p>
-    </form>
-  </div>
- </section>
+  </section>
 </body>
 
 </html>
