--- a/sign-up.html
+++ b/sign-up.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
+    rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -10,41 +16,45 @@
     crossorigin="anonymous"></script>
   <title>Sign up</title>
   <style>
-     body{
+    body {
       margin: 0px;
       padding: 0px;
+      font-family: "Monomakh", serif;
+      font-weight: 400;
     }
-    section{
+
+    section {
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       display: flex;
       justify-content: center;
-      height:700px;
+      height: 700px;
       align-items: center;
       flex-direction: column;
     }
 
-      .login-text {
+    .login-text {
       font-size: 33px;
       margin: 30px 0px;
       font-weight: bold;
     }
+
     .login-container {
       background-color: white;
       /* width: 100%; */
       border: 5px solid orange;
       max-width: 400px;
-      height:450px;
+      height: 450px;
       padding: 40px 40px;
-      border-radius:20px;
+      border-radius: 20px;
     }
 
     .button-container {
       width: 100%;
-      height:50px;
+      height: 50px;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom:40px;
+      margin-bottom: 40px;
     }
 
     .login-button {
@@ -59,11 +69,12 @@
     }
 
     .login-button a {
-      color:black;
+      color: black;
       font-size: 18px;
       font-weight: bold;
       text-decoration: none;
     }
+
     .signup-button {
       width: 50%;
       border: none;
@@ -72,54 +83,59 @@
       box-shadow: 18px 10px 12px lightgrey;
       justify-content: center;
       display: flex;
-      border-radius:20px;
+      border-radius: 20px;
       height: 50px;
     }
+
     .signup-button a {
       color: white;
       font-size: 18px;
       font-weight: bold;
       text-decoration: none;
     }
-    .form-input{
-      margin-top:20px;
+
+    .form-input {
+      margin-top: 20px;
       box-shadow: 18px 10px 12px lightgrey;
       height: 50px;
       width: 100%;
-      border-radius:20px;
+      border-radius: 20px;
     }
-    .signup{
+
+    .signup {
       background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
       box-shadow: 18px 10px 12px lightgrey;
-      height:50px;
-      margin-top:30px;
+      height: 50px;
+      margin-top: 30px;
       color: white;
       font-size: 20px;
       font-weight: bold;
       width: 100%;
-      border-radius:20px;
+      border-radius: 20px;
     }
   </style>
 </head>
+
 <body>
- <section>
-  <h2 class="login-text">Signup</h2>
-  <div class="container login-container">
-    <div class="button-container">
-      <button class="login-button"><a href="login.html">Login</a></button>
-      <button class="signup-button"><a href="sign-up.html">Sigup</a></button>
+  <section>
+    <h2 class="login-text">Signup</h2>
+    <div class="container login-container">
+      <div class="button-container">
+        <button class="login-button"><a href="login.html">Login</a></button>
+        <button class="signup-button"><a href="sign-up.html">Sigup</a></button>
+      </div>
+      <form action="">
+        <div>
+          <input type="email" placeholder="Email Address" class="form-control form-input" required>
+        </div>
+        <div>
+          <input type="password" placeholder="Password" class="form-control form-input" required>
+          <input type="password" placeholder="Comfirm Password" class="form-control form-input" required>
+        </div>
+        <button class="signup">Signup</button>
+      </form>
     </div>
-    <form action="">
-     <div>
-      <input type="email" placeholder="Email Address" class="form-control form-input" required>
-     </div>
-     <div>
-      <input type="password" placeholder="Password" class="form-control form-input" required>
-      <input type="password" placeholder="Comfirm Password" class="form-control form-input" required>
-     </div>
-      <button class="signup">Signup</button>
-    </form>
-  </div>
- </section>
+  </section>
 </body>
+
 </html>
